[package]
name = "patcher"
version = "1.0.0"
authors = ["Daniel Santana <danielgsantana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
# serde_bytes = "0.11"
hex-buffer-serde = "0.3"
serde_json = "1.0"
snafu = "0.6"
structopt = "0.3"
# uuid = { version = "0.8", features = ["v4"] }

[profile.release]
lto = true
debug = true