[package]
name = "patcher"
version = "1.0.0"
authors = ["Daniel Santana <danielgsantana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
hex-buffer-serde = "0.4"
serde_json = "1.0"
thiserror = "1"

[profile.release]
lto = true
debug = true
